fix: update navigation menu selector to support menus wrapped in divs

--- a/wordpress/wp-content/themes/weardale-together/css/components.css
+++ b/wordpress/wp-content/themes/weardale-together/css/components.css
@@ -3,7 +3,8 @@
  */
 
 /* Navigation Menu */
-.main-navigation ul {
+.main-navigation > ul,
+.main-navigation > div > ul {
     list-style: none;
     margin: 0;
     padding: 0;
